# FACETpy

./: .gitignore  .readthedocs.yaml  AGENTS.md  AI_AGENT_PLAYBOOK.md  AI_PROMPT_TEMPLATES.md  CLAUDE.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_UPDATE_COMPLETE.md  FilterWeights.mat  HANDOFF.md  MATLAB_EDITION_AGENT_NOTES.md  PRESENTATION.md  QUICKSTART.md  README.md  README.rst  README_PYPI.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  RELEASING.md  SPHINX_BUILD_FIXED.md  TESTING_COMPLETE.md  gantt.md  project_structure  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
ai-docs/: DOCUMENTATION_STATUS.md  PRESENTATION.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  TESTING_STATUS.md  evaluation_comparison.md  facet_matlab_vs_python.md  ra_sequence_port_plan.md
bids_dir/: participants.tsv
docs/: PROCESSOR_GUIDELINES.md  README.md  deep_learning_parallel_runpod_workflow.md  model_agent_prompts.md  requirements.txt
docs/interactive/: demucs_explorer.html
docs/research/: architecture_catalog.md  run_2_plan.md  run_3_plan.md  thesis_results_report.md
docs/source/: conf.py  index.rst  project_overview.rst
examples/: README.md  advanced_workflows.py  align_samping_example.py  apply_context_artifact_model.py  artifact_estimation_example.py  batch_processing.py  build_epoch_context_dataset.py  build_niazy_artifact_windows.py  build_niazy_proof_fit_context_dataset.py  build_synthetic_spike_artifact_context_dataset.py  build_synthetic_spike_artifact_dataset.py  cleanexjanik_parity_pipeline.py  complete_pipeline_example.py  complete_pipeline_example_bcg.py  complete_pipeline_example_large_dataset.py  complete_pipeline_example_large_dataset_bcg.py  complete_pipeline_example_mff.py  context_artifact_training_demo.py  context_artifact_training_demo.yaml  convert_types.py  docs_tutorial_example.py  eeg_generation_visualization_example.py  evaluate_cascaded_daes_niazy_proof_fit.py  evaluate_context_artifact_model.py  evaluate_context_artifact_model_full_metrics.py  evaluate_conv_tasnet.py  evaluate_demucs.py  evaluate_ic_unet.py  evaluate_sepformer_niazy_proof_fit.py  evaluate_st_gnn.py  evaluation.py  evaluation_example.py  example.py  example_align_subsample.py  example_bcg.py  example_clean_data.py  example_deeplearning.py  example_deeplearning_existing_model.py  example_deeplearning_torch.py  example_deeplearning_torch_existing_model.py  (+28 more)
examples/archiv/: README.md  edf_example_with_qrs.ipynb  example_bcg.py  example_deeplearning.py  example_deeplearning_existing_model.py  example_deeplearning_torch.py  example_evaluation_progressive.py  example_full.py  example_load_edf_save_as_bids_load_from_bids.py  example_missing_triggers.py  example_profiling.py  example_qrs.py  example_simple.py  new_api_demo.py  plot_ecg_events.py  temp_bachelor_file.py  three_screenshots.py
examples/dataset_building/: build_epoch_context_dataset.py  build_niazy_artifact_windows.py  build_niazy_proof_fit_context_dataset.py  build_synthetic_spike_artifact_context_dataset.py  build_synthetic_spike_artifact_dataset.py  extract_large_mff_aas_artifact_signal.py  extract_niazy_artifact_signal.py  generate_synthetic_fmri_artifact_source.py  generate_synthetic_spike_source_dataset.py
examples/datasets/: corrected.edf  headmotiondata_209s.tsv  headmotiondata_829s.tsv  test_epilepsy_eeg.edf
examples/epilepsynotebooks/: seizure_patient_03_explore.ipynb  seizure_patient_03_seizure.ipynb  spike_patient_correlation.ipynb  spike_patient_test.ipynb  spike_patient_test_localization.ipynb  spike_template_F3.npy  test_example.ipynb  test_manual.ipynb
examples/example_full_bids/: participants.tsv
examples/model_evaluation/: evaluate_cascaded_daes_niazy_proof_fit.py  evaluate_context_artifact_model.py  evaluate_context_artifact_model_full_metrics.py  evaluate_conv_tasnet.py  evaluate_demucs.py  evaluate_ic_unet.py  evaluate_sepformer_niazy_proof_fit.py  evaluate_st_gnn.py
helpful_scripts/: clean_pycache.sh
quick-notes/: improvement-areas.md
scripts/: bootstrap.sh  clean_pycache.sh  docs_snippet_smoke.py  install.sh
src/: Example1.ipynb  Example2.ipynb  Example_2.ipynb  Example_allen.ipynb  Example_from_bids_correction_to_bids.ipynb  Example_from_edf_correction_to_bids.ipynb  Example_from_edf_correction_to_bids_allen.ipynb  Example_moosmann.ipynb  Example_moosmann_bids.ipynb  Example_performance_meassure.ipynb  align_samping_example.py  d_sub-xp101_task-eegfmriNF_headmotion.tsv  docs_tutorial_example.py  evaluation.py  evaluation_example.py  example1.py  exp_ex copy.py  exp_ex.py  exp_ex_2.py  exp_ex_missing_triggers.py
tests/: README.md  conftest.py  test_artifact_library_builder.py  test_config.py  test_console_modern.py  test_context_deep_learning_correction.py  test_core_channel_sequential.py  test_core_context.py  test_core_pipeline.py  test_core_processor.py  test_correction.py  test_deep_learning.py  test_eeg_generator_annotations.py  test_epoch_context_dataset_builder.py  test_evaluation.py  test_facet.py  test_io_exporters.py  test_io_loaders.py  test_model_evaluation_writer.py  test_niazy_proof_fit_dataset_builder.py  test_pipelines.py  test_preprocessing.py  test_training.py  test_training_cli.py
tools/: aggregate_unified_holdout.py  benchmark_inference_clean.py  eval_unified_holdout.py  generate_status_report_figures.py  render_status_report.py
(+551 files in other folders)
