[tool.poetry]
name = "facet"
version = "2.0.0"
description = "A flexible artifact correction and evaluation toolbox to correct eeg data"
authors = ["Janik Michael Mueller <janik.michael.mueller@gmail.com>"]
license = "GNUv3"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "0.7.2"
matplotlib = "^3.10.3"
mne = "1.10.2"
mne-bids = "0.17"
numpy = "2.1.3"
pandas = "^2.2.3"
scipy = "^1.15.3"
scikit-learn = "^1.4.2"
neurokit2 = "^0.2.7"
rich = "^14.2.0"
tensorflow = {version = "^2.19.0", optional = true}
pyqt6 = {version = "^6.6.1", optional = true}
notebook = {version = "^7.1.2", optional = true}

[tool.poetry.extras]
deeplearning = ["tensorflow"]
gui = ["pyqt6"]
notebooks = ["notebook"]
all = ["tensorflow", "pyqt6", "notebook"]

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build-fastranc = "facet.build:compile_fastranc"
