[project]
name = "facetpy"
version = "2.0.2"
description = "A flexible artifact correction and evaluation toolbox to correct eeg data"
authors = [
    { name = "Janik Michael Mueller", email = "janik.michael.mueller@gmail.com" },
]
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
keywords = ["eeg", "fmri", "artifact-correction", "mne", "neuroscience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "loguru==0.7.2",
    "matplotlib>=3.10.3,<4.0.0",
    "mne==1.10.2",
    "mne-bids>=0.17,<0.18",
    "defusedxml>=0.7.1,<0.8.0",
    "edfio>=0.4.11,<0.5.0",
    "numpy==2.1.3",
    "pandas>=2.2.3,<3.0.0",
    "scipy>=1.15.3,<2.0.0",
    "scikit-learn>=1.4.2,<2.0.0",
    "neurokit2>=0.2.7,<0.3.0",
    "rich>=14.2.0,<15.0.0",
    "eeglabio>=0.1.3,<0.2.0",
]

[project.optional-dependencies]
deeplearning = ["tensorflow>=2.19.0,<3.0.0"]
gui = ["pyqt6>=6.6.1,<7.0.0"]
notebooks = ["notebook>=7.1.2,<8.0.0", "ipython>=7.23.1,<9"]
docs = ["sphinx>=7.2.6,<8.0.0", "sphinx-rtd-theme>=2.0.0,<3.0.0", "myst-parser>=3.0.1,<4.0.0"]
all = [
    "tensorflow>=2.19.0,<3.0.0",
    "pyqt6>=6.6.1,<7.0.0",
    "notebook>=7.1.2,<8.0.0",
    "ipython>=7.23.1,<9",
    "sphinx>=7.2.6,<8.0.0",
    "sphinx-rtd-theme>=2.0.0,<3.0.0",
    "myst-parser>=3.0.1,<4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.15.2,<0.16.0",
]

[project.urls]
Homepage = "https://github.com/H0mire/facetpy"
Repository = "https://github.com/H0mire/facetpy"
Documentation = "https://facetpy.readthedocs.io/"

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "facet"
module-root = "src"

[project.scripts]
build-fastranc = "facet.build:compile_fastranc"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["facet"]

[tool.ruff.lint.per-file-ignores]
# Package __init__ uses early logging config, optional imports, and conditional exports
"src/facet/__init__.py" = ["E402"]
